[project]
name = "mcp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.1",
    "arxiv>=4.0.0",
    "asyncio>=4.0.0",
    "mcp>=1.27.2",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.2.2",
]
